--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@xmldom/xmldom": "^0.8.10",
+    "dayjs": "^1.11.10",
     "google-auth-library": "^9.2.0",
     "googleapis": "^128.0.0",
+    "mongodb": "^6.3.0",
     "xmlbuilder2": "^3.1.1",
     "xpath": "^0.0.34"
   }
