--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@xmldom/xmldom": "^0.8.10",
     "dayjs": "^1.11.10",
+    "deep-equal": "^2.2.3",
     "google-auth-library": "^9.2.0",
     "googleapis": "^128.0.0",
+    "jsonpath-plus": "^8.0.0",
     "mongodb": "^6.3.0",
     "xmlbuilder2": "^3.1.1",
     "xpath": "^0.0.34"
