--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "googleapis": "^128.0.0",
     "jsonpath-plus": "^8.0.0",
     "mongodb": "^6.3.0",
+    "pino": "^8.19.0",
     "xmlbuilder2": "^3.1.1",
     "xpath": "^0.0.34"
   }
